Bug 565890 - Bump useradmin to BREE 1.8
Fix some warnings and silence others.

Change-Id: Ie4b4e12e6f1c3b4f3fa10f4e741e9424bbb948b7
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>